--- a/blockprod/Cargo.toml
+++ b/blockprod/Cargo.toml
@@ -13,28 +13,28 @@ chainstate-types = { path = "../chainstate/types" }
 common = { path = "../common/" }
 consensus = { path = "../consensus" }
 crypto = { path = "../crypto/" }
+logging = {path = '../logging'}
 mempool = { path = "../mempool/" }
+rpc = { path = "../rpc/" }
 serialization = { path = "../serialization" }
 subsystem = { path = "../subsystem/" }
-logging = {path = '../logging'}
 utils = {path = '../utils'}
-rpc = { path = "../rpc/" }
 
 async-trait.workspace = true
 hex.workspace = true
 futures.workspace = true
 jsonrpsee = { workspace = true, features = ["macros"] }
 parity-scale-codec.workspace = true
-slave-pool = "0.2"
+slave-pool.workspace = true
 serde = { workspace = true, features = ["derive"] }
 thiserror.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
-void = "1.0"
+void.workspace = true
 
 [dev-dependencies]
-rstest.workspace = true
-
 chainstate-storage = { path = "../chainstate/storage/" }
 chainstate-types = {path = '../chainstate/types'}
 mocks = { path = "../mocks/" }
 test-utils = {path = '../test-utils'}
+
+rstest.workspace = true
