--- a/chainstate/storage/Cargo.toml
+++ b/chainstate/storage/Cargo.toml
@@ -15,7 +15,7 @@ serialization = { path = "../../serialization" }
 storage = { path = '../../storage', features = ['inmemory'] }
 utxo = { path = '../../utxo' }
 
-mockall = { version = "0.11", optional = true }
+mockall = { workspace = true, optional = true }
 
 [dev-dependencies]
 crypto = { path = '../../crypto' }
@@ -24,8 +24,8 @@ utils = { path = '../../utils' }
 
 itertools.workspace = true
 rstest.workspace = true
-mockall = "0.11"
-num-traits = "0.2"
+mockall.workspace = true
+num-traits.workspace = true
 
 [features]
 mock = [ 'mockall' ]
