--- a/chainstate/tx-verifier/Cargo.toml
+++ b/chainstate/tx-verifier/Cargo.toml
@@ -8,10 +8,10 @@ rust-version.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-common = {path = '../../common'}
-consensus = {path = '../../consensus'}
 chainstate-storage = {path = '../storage'}
 chainstate-types = {path = '../types'}
+common = {path = '../../common'}
+consensus = {path = '../../consensus'}
 crypto = {path = '../../crypto'}
 pos_accounting = {path = '../../pos_accounting'}
 utils = {path = '../../utils'}
@@ -20,13 +20,11 @@ utxo = {path = '../../utxo'}
 itertools.workspace = true
 static_assertions.workspace = true
 thiserror.workspace = true
-
-fallible-iterator = "0.2"
-replace_with = "0.1"
+fallible-iterator.workspace = true
+replace_with.workspace = true
 
 [dev-dependencies]
 test-utils = { path = "../../test-utils" }
 
 rstest.workspace = true
-
-mockall = "0.11"
+mockall.workspace = true
