--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -9,34 +9,34 @@ rust-version.workspace = true
 
 [dependencies]
 crypto = { path = '../crypto'}
-merkletree = { path = "../merkletree", features = ["scale-codec"] }
-serialization = { path = "../serialization" }
 logging = { path = "../logging/" }
+merkletree = { path = "../merkletree", features = ["scale-codec"] }
 script = { path = '../script'}
-utils = {path = '../utils'}
+serialization = { path = "../serialization" }
 typename = { path = "../utils/typename" }
+utils = {path = '../utils'}
 
-anyhow = "1.0"
-bech32 = "0.9"
-fixed-hash = "0.8"
-lazy_static = "1.4"
-num = "0.4"
-
+anyhow.workspace = true
+bech32.workspace = true
+fixed-hash.workspace = true
 generic-array.workspace = true
 hex.workspace = true
 itertools.workspace = true
-parity-scale-codec.workspace = true
+lazy_static.workspace = true
+num.workspace = true
 once_cell.workspace = true
+parity-scale-codec.workspace = true
 serde = { workspace = true, features = ["derive"] }
 static_assertions.workspace = true
 thiserror.workspace = true
 
 [dev-dependencies]
-rstest.workspace = true
-bitcoin-bech32 = "0.13"
-expect-test = "1.3"
-proptest = "1.0"
-serde_test = "1.0"
-serde_json = "1.0"
-serial_test = "2.0"
 test-utils = {path = '../test-utils'}
+
+bitcoin-bech32.workspace = true
+expect-test.workspace = true
+proptest.workspace = true
+rstest.workspace = true
+serde_json.workspace = true
+serde_test.workspace = true
+serial_test.workspace = true
