--- a/logging/Cargo.toml
+++ b/logging/Cargo.toml
@@ -8,5 +8,5 @@ rust-version.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-log = "0.4"
-env_logger = "0.10"
+env_logger.workspace = true
+log.workspace = true
