--- a/p2p/Cargo.toml
+++ b/p2p/Cargo.toml
@@ -21,7 +21,7 @@ subsystem = { path = "../subsystem/" }
 utils = { path = "../utils/" }
 
 async-trait.workspace = true
-bytes = "1.1"
+bytes.workspace = true
 futures.workspace = true
 hex.workspace = true
 itertools.workspace = true
@@ -29,29 +29,29 @@ jsonrpsee = { workspace = true, features = ["macros"] }
 once_cell.workspace = true
 parity-scale-codec.workspace = true
 serde.workspace = true
-siphasher = "0.3"
-snowstorm = "0.4"
-socket2 = { version = "0.5", features = ["all"] }
-sscanf = "0.4"
-tap = "1.0"
+siphasher.workspace = true
+snowstorm.workspace = true
+socket2 = { workspace = true, features = ["all"] }
+sscanf.workspace = true
+tap.workspace = true
 thiserror.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
-tokio-socks = { version = "0.5" }
-tokio-util = {version = "0.7", default-features = false, features = ["codec"] }
-void = "1.0"
+tokio-socks.workspace = true
+tokio-util = { workspace = true, default-features = false, features = ["codec"] }
+void.workspace = true
 
 [dev-dependencies]
 chainstate-storage = { path = "../chainstate/storage" }
 chainstate-test-framework = { path = "../chainstate/test-framework" }
 consensus = { path = "../consensus" }
 crypto = { path = "../crypto/" }
-storage-inmemory = { path = "../storage/inmemory" }
 p2p-backend-test-suite = { path = "backend-test-suite" }
 p2p-test-utils = { path = "p2p-test-utils" }
+storage-inmemory = { path = "../storage/inmemory" }
 test-utils = { path = "../test-utils" }
 
-criterion = "0.4"
-portpicker = "0.1"
+criterion.workspace = true
+portpicker.workspace = true
 rstest.workspace = true
 
 [[test]]
