--- a/storage/lmdb/Cargo.toml
+++ b/storage/lmdb/Cargo.toml
@@ -13,10 +13,10 @@ utils = { path = '../../utils' }
 lmdb-mintlayer = { git = 'https://github.com/mintlayer/lmdb-rs-mintlayer.git', tag = 'v0.16.2' }
 
 [dev-dependencies]
-storage-backend-test-suite = { path = "../backend-test-suite" }
-test-utils = { path = "../../test-utils" }
 rstest.workspace = true
-tempfile = "3.3"
+storage-backend-test-suite = { path = "../backend-test-suite" }
+tempfile.workspace = true
+test-utils = { path = "../../test-utils" }
 
 [[test]]
 name = "backend"
