--- a/Cargo.toml
+++ b/Cargo.toml
@@ -115,6 +115,7 @@ clap = "4"
 criterion = "0.4"
 crossterm = "0.26"
 directories = "5.0"
+enum-iterator = "1.4.1"
 env_logger = "0.10"
 expect-test = "1.3"
 fallible-iterator = "0.2"
