--- a/chainstate/types/Cargo.toml
+++ b/chainstate/types/Cargo.toml
@@ -13,7 +13,11 @@ crypto = { path = "../../crypto" }
 logging = { path = '../../logging' }
 serialization = { path = "../../serialization" }
 storage = { path = "../../storage/" }
+utils = { path = "../../utils/" }
 
-thiserror.workspace = true
-parity-scale-codec.workspace = true
+enum-iterator.workspace = true
+num-derive.workspace = true
+num-traits.workspace = true
 generic-array.workspace = true
+parity-scale-codec.workspace = true
+thiserror.workspace = true
