shutdown flag in p2p is now a simplified atomic

--- a/p2p/backend-test-suite/Cargo.toml
+++ b/p2p/backend-test-suite/Cargo.toml
@@ -14,6 +14,7 @@ p2p = { path = "../../p2p" }
 p2p-test-utils = { path = "../p2p-test-utils" }
 serialization = { path = "../../serialization" }
 subsystem = { path = "../../subsystem/" }
+utils = { path = "../../utils/" }
 
 futures.workspace = true
 libtest-mimic.workspace = true
