--- a/p2p/p2p-test-utils/Cargo.toml
+++ b/p2p/p2p-test-utils/Cargo.toml
@@ -14,6 +14,7 @@ crypto = { path = "../../crypto/" }
 mempool = { path = "../../mempool/" }
 subsystem = { path = "../../subsystem/" }
 test-utils = { path = "../../test-utils" }
+utils = { path = "../../utils" }
 
 portpicker.workspace = true
 tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "sync"] }
