Review comments have been applied; tests for Chainstate::with_rw_tx... have been written;

--- a/chainstate/Cargo.toml
+++ b/chainstate/Cargo.toml
@@ -35,5 +35,6 @@ tokio.workspace = true
 
 [dev-dependencies]
 test-utils = { path = "../test-utils" }
+storage = { path = "../storage" }
 
 rstest.workspace = true
