--- a/mempool/Cargo.toml
+++ b/mempool/Cargo.toml
@@ -14,6 +14,7 @@ chainstate-types = { path = '../chainstate/types' }
 common = { path = '../common' }
 crypto = { path = '../crypto' }
 logging = { path = '../logging' }
+p2p-types = { path = '../p2p/types' }
 pos_accounting = { path = '../pos_accounting' }
 rpc = { path = '../rpc' }
 serialization = { path = '../serialization' }
