Fix for BlockStatus update to the FullyChecked stage

--- a/chainstate/Cargo.toml
+++ b/chainstate/Cargo.toml
@@ -21,6 +21,7 @@ utils = {path = '../utils'}
 utxo = {path = '../utxo'}
 
 async-trait.workspace = true
+derive_more.workspace = true
 hex.workspace = true
 itertools.workspace = true
 jsonrpsee = { workspace = true, features = ["macros"] }
