--- a/Cargo.toml
+++ b/Cargo.toml
@@ -107,6 +107,7 @@ base64 = "0.21"
 bech32 = "0.9"
 bip39 = { version = "2.0", default-features = false }
 bitcoin-bech32 = "0.13"
+bitflags = "1.3.2"
 blake2 = "0.10"
 bytes = "1.1"
 cfg-if = "1.0"
@@ -114,6 +115,7 @@ chacha20poly1305 = "0.10"
 clap = "4"
 criterion = "0.4"
 crossterm = "0.26"
+derive_more = "0.99.16"
 directories = "5.0"
 enum-iterator = "1.4.1"
 env_logger = "0.10"
