--- a/chainstate/types/Cargo.toml
+++ b/chainstate/types/Cargo.toml
@@ -14,6 +14,8 @@ logging = { path = '../../logging' }
 serialization = { path = "../../serialization" }
 storage = { path = "../../storage/" }
 
+bitflags.workspace = true
+derive_more.workspace = true
 enum-iterator.workspace = true
 generic-array.workspace = true
 parity-scale-codec.workspace = true
