--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,8 @@ members = [
   "node-lib",                     # Node lib; the common library between daemon, tui and gui node executables.
   "p2p",                          # P2p communication interfaces and protocols.
   "p2p/backend-test-suite",       # P2p backend agnostic tests.
-  "pos_accounting",               # PoS accounting and balances abstractions
+  "p2p/types",                    # P2p support types with minimal dependencies.
+  "pos_accounting",               # PoS accounting and balances abstractions.
   "rpc",                          # Rpc abstraction and implementation.
   "script",                       # Bitcoin script and its interfaces.
   "serialization",                # Full featured serialization interfaces and implementations.
