--- a/p2p/types/Cargo.toml
+++ b/p2p/types/Cargo.toml
@@ -7,7 +7,8 @@ rust-version.workspace = true
 
 [dependencies]
 
-serialization = { path = "../../serialization/" }
+common = { path = "../../common" }
+serialization = { path = "../../serialization" }
 
 parity-scale-codec.workspace = true
 serde.workspace = true
