invalidate_block and reset_block_failure_flags functions were implemented; min_height_with_allowed_reorg is now stored in the DB; casting between &Id<Block> and &Id<GenBlock> was implemented using ref_cast; some minor improvements;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -157,6 +157,7 @@ quote = "1.0"
 rand = "0.8"
 rand_chacha = "0.3"
 reedline = "0.19"
+ref-cast = "1.0.18"
 replace_with = "0.1"
 ripemd = "0.1"
 rlimit = "0.9"
