--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -25,6 +25,7 @@ lazy_static.workspace = true
 num.workspace = true
 once_cell.workspace = true
 parity-scale-codec.workspace = true
+ref-cast.workspace = true
 serde = { workspace = true, features = ["derive"] }
 static_assertions.workspace = true
 thiserror.workspace = true
