--- a/docker/Dockerfile.node-gui
+++ b/docker/Dockerfile.node-gui
@@ -1,19 +1,20 @@
 # Build Stage
 FROM rust AS builder
 
-WORKDIR /usr/src/wallet-gui
+WORKDIR /usr/src/
 
 COPY . .
 
-RUN cargo build --release -j1
+ARG NUM_JOBS=1
+RUN cargo build --release -j${NUM_JOBS}
 
 # Runtime Stage
-FROM debian:latest
+FROM debian:bookworm-slim
 
 # Install any necessary dependencies for your GUI (such as X11, GTK, etc.)
 # Replace libgtk-3-0 with the appropriate dependencies for your application
 RUN apt-get update && apt-get install -y ca-certificates libgtk-3-0 && rm -rf /var/lib/apt/lists/*
 
-COPY --from=builder /usr/src/wallet-gui/target/release/wallet-gui /usr/bin/wallet-gui
+COPY --from=builder /usr/src/target/release/node-gui /usr/bin/node-gui
 
-CMD ["wallet-gui"]
+CMD ["node-gui"]
