Add sqlx and some refactoring

--- a/api-server/api-server-common/Cargo.toml
+++ b/api-server/api-server-common/Cargo.toml
@@ -12,3 +12,5 @@ common = { path = '../../common' }
 serialization = { path = "../../serialization" }
 
 thiserror.workspace = true
+
+sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
