--- a/wallet/wallet-cli/Cargo.toml
+++ b/wallet/wallet-cli/Cargo.toml
@@ -8,6 +8,7 @@ rust-version.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+utils = { path = "../../utils" }
 wallet-cli-lib = { path = "../wallet-cli-lib" }
 
 clap = { version = "4", features = ["derive"] }
