--- a/api-server/api-server-common/Cargo.toml
+++ b/api-server/api-server-common/Cargo.toml
@@ -11,6 +11,7 @@ license.workspace = true
 common = { path = '../../common' }
 serialization = { path = "../../serialization" }
 
+parity-scale-codec.workspace = true
 thiserror.workspace = true
 
 sqlx = { version = "0.7", features = [ "runtime-tokio" ] }
