First working test of the scanner with some fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,6 +62,8 @@ members = [
 ]
 
 default-members = [
+  "api-server/scanner-daemon",
+  "api-server/web-server",
   "chainstate",
   "common",
   "crypto",
