--- a/serialization/Cargo.toml
+++ b/serialization/Cargo.toml
@@ -11,4 +11,5 @@ serialization-tagged = { path = 'tagged' }
 
 hex.workspace = true
 serde = { workspace = true, features = ["derive"] }
+serde_json.workspace = true
 thiserror.workspace = true
