More improvements to sqlx storage implementation and tests

--- a/api-server/api-server-common/Cargo.toml
+++ b/api-server/api-server-common/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 
 [dependencies]
 common = { path = '../../common' }
+logging = {path = '../../logging'}
 serialization = { path = "../../serialization" }
 
 parity-scale-codec.workspace = true
