Add option to save seed phrase in the wallet DB

--- a/wallet/storage/Cargo.toml
+++ b/wallet/storage/Cargo.toml
@@ -18,6 +18,7 @@ wallet-types = { path = '../types' }
 utils = { path = '../../utils' }
 
 thiserror.workspace = true
+bip39 = { workspace = true, default-features = false, features = ["std", "zeroize"] }
 
 [dev-dependencies]
 test-utils = {path = '../../test-utils'}
