--- a/.gitlab/ci/.gitlab-ci.yml
+++ b/.gitlab/ci/.gitlab-ci.yml
@@ -1,3 +1,10 @@
+stages:  
+  - fmt        # List of stages for jobs, and their order of execution
+  - build
+  - test
+  - sgh
+  - fn
+
 fmt-job:
   stage: fmt
   script:
